--- a/source/_posts/100-500.md
+++ b/source/_posts/100-500.md
@@ -1,15 +1,13 @@
 ---
-title: 盈立数智有限公司面试经验
+title: 规模100-500公司面试经验
 tag : 面经
-categories: Bug
+categories: 面经
 cover: https://picsum.photos/1080/1080?random=122121
 feature: false
 date: 2023-03-09 17:00:01
 
 ---
-# 自我介绍（技术栈+项目+学校的实习）
-
-# 面试官提问
+# 盈立数智有限公司
 ## vue
 ### vue2的原理
 （没反应过来是什么原理，所以就都答一下，当时我只答了响应式原理）
