--- a/source/_posts/1k-9k.md
+++ b/source/_posts/1k-9k.md
@@ -1,5 +1,5 @@
 ---
-title: 规模1k-9k公司面试经验
+title: 北京用友畅捷通（1k-9k）面试经验
 tag : 面经
 categories: 面经
 cover: https://picsum.photos/1080/1080?random=122129
@@ -8,7 +8,7 @@ date: 2023-03-17 17:00:01
 
 ---
 
-# 用友畅捷通
+# 用友畅捷通（基本不大会，寄！）
 
 ## 状态管理
 
