更新实习日记

--- a/source/_posts/实习1.md
+++ b/source/_posts/实习1.md
@@ -1,5 +1,5 @@
 ---
-title: 第一天实习
+title: 第一周实习
 tag : 实习
 categories: 实习经历
 cover: https://picsum.photos/1080/1080?random=20230324
@@ -7,6 +7,9 @@ feature: false
 date: 2023-03-24 09:00:01
 
 ---
+## 体会
+1.看文档很不习惯，之前习惯看视频，得好好锻炼
+
 
 ## 入职手续
 
@@ -27,24 +30,29 @@ date: 2023-03-24 09:00:01
 2.装Node和nvm版本管理,git以及配置ssh
 3.加入gitlab仓库拉项目，跑项目
 4.看项目以及公司之前的业务
+5.学习qiankun(微前端)
 
 ## 知识点
-1.项目用的是yarn包管理工具
+### 1.项目用的是yarn包管理工具
 - 用的是管理员权限才行
 - 注意配系统变量
 ***https://blog.csdn.net/qq_42483473/article/details/122060346***
-2.如何使用Nvm切换Node版本
+### 2.如何使用Nvm切换Node版本
  - 这里本来用n来管理，但是n是mac系统用的
  - nvm功能也是一样的
  - 注意不需要重启和去官网下载版本替换，直接装直接切换也ok
 ***https://blog.csdn.net/Sunshinedada/article/details/128256904***
-3.装Node
+### 3.装Node
 ***https://blog.csdn.net/weixin_44893902/article/details/121788104***
-4.装Git以及配密钥
+### 4.装Git以及配密钥
 git的安装（用阿里镜像下载，会比较快）：
 ***https://blog.csdn.net/hanhanwanghaha/article/details/108341368***
 密钥的配置：
 ***https://blog.csdn.net/weixin_43909743/article/details/122178870***
 
+5.微前端
+https://qiankun.umijs.org/zh/guide
 
+6.CI/CD
+https://docs.gitlab.cn/jh/ci/introduction/
 
