更新实习内容

--- a/source/_posts/实习1.md
+++ b/source/_posts/实习1.md
@@ -30,7 +30,7 @@ date: 2023-03-24 09:00:01
 2.装Node和nvm版本管理,git以及配置ssh
 3.加入gitlab仓库拉项目，跑项目
 4.看项目以及公司之前的业务
-5.学习qiankun(微前端)
+5.学习qiankun(微前端),vue3的官方文档,gitlab的ci/cd概念
 
 ## 知识点
 ### 1.项目用的是yarn包管理工具
@@ -56,3 +56,5 @@ https://qiankun.umijs.org/zh/guide
 6.CI/CD
 https://docs.gitlab.cn/jh/ci/introduction/
 
+7.vue3
+https://cn.vuejs.org/
