--- a/source/_posts/软考.md
+++ b/source/_posts/软考.md
@@ -16,15 +16,15 @@ date: 2023-03-26 17:00:01
 - 刷专项题
 ### 计算机组成原理（上午题6分）
 <!-- ![](../images/http.png) -->
-1.进制转换
-    1.1 R进制转十进制：按权展开
+**1.进制转换**
+   *** 1.1 R进制转十进制：按权展开 ***
     正数部分为R的0，1，2，3依次递增作为指数，再乘以所在位的数据。
     小数部分为R的-1，-2依次递减，再乘以所在位的数据。
     最终进行相加。
-    1.2 十进制转R进制：短除法
+    *** 1.2 十进制转R进制：短除法 ***
         取余数，从下往上列
-2.数据表示
-    2.1 原码反码补码移码
+**2.数据表示**
+    ***2.1 原码反码补码移码***
         1. 原码转反码
     当原码的真值为正数时，反码的机器数就等于原码的机器数
     当原码的真值为负数时，反码的机器数等于原码的机器数取反（符号位不变）
@@ -36,7 +36,7 @@ date: 2023-03-26 17:00:01
     当原码的真值为负数时，移码的机器数等于原码机器数取反加1（符号位取反）
         4.表达式
         移码表达式，就单个因数（减数）取移码，之后进行相加减
-    2.2 表示范围
+    ***2.2 表示范围***
     原码和反码：-127~127
     补码：-127~127
 3.
