新增评论功能

--- a/source/_posts/实习1.md
+++ b/source/_posts/实习1.md
@@ -1,5 +1,5 @@
 ---
-title: 第一周实习
+title: 第一次实习
 tag : 实习
 categories: 实习经历
 cover: https://picsum.photos/1080/1080?random=20230324
@@ -9,6 +9,7 @@ date: 2023-03-24 09:00:01
 ---
 ## 体会
 1.看文档很不习惯，之前习惯看视频，得好好锻炼
+2.看别人代码好烦，要先明确需求的实现逻辑，以及根据问题找到原因，然后去完成需求
 
 
 ## 入职手续
@@ -32,7 +33,7 @@ date: 2023-03-24 09:00:01
 4.看项目以及公司之前的业务
 5.学习qiankun(微前端),vue3的官方文档,gitlab的ci/cd概念
 
-## 知识点
+## 第一周任务
 ### 1.项目用的是yarn包管理工具
 - 用的是管理员权限才行
 - 注意配系统变量
@@ -58,3 +59,7 @@ https://docs.gitlab.cn/jh/ci/introduction/
 
 7.vue3
 https://cn.vuejs.org/
+
+
+8.APP端H5的调试，合并两个功能点
+在Network看发送请求所需要的请求体格式，然后再去找接口，再保证接口里的参数和后端要求的一样。
