--- a/source/_posts/计算机组成和结构.md
+++ b/source/_posts/计算机组成和结构.md
@@ -5,7 +5,7 @@ categories: 软考
 cover: https://picsum.photos/1080/1080?random=12211
 feature: false
 date: 2023-03-29 17:00:01
-
+comments: true
 ---
 
 ### 计算机组成原理（上午题6分）
