--- a/source/_posts/实习日记2.md
+++ b/source/_posts/实习日记2.md
@@ -8,6 +8,6 @@ cover: https://picsum.photos/1080/1080?random=122184
 feature: false
 date: 2023-04-10 17:51:01
 ---
-## 生产队的驴都笑哈哈了！！！##
+## 生产队的驴都笑哈哈了！！！
 
 ![](../images/shixi/zhouji2.png)
