--- a/source/_posts/算法3.0.md
+++ b/source/_posts/算法3.0.md
@@ -37,4 +37,35 @@ var map = function(arr, fn) {
     return arr
 };
 ```
+
+**力扣：https://leetcode.cn/problems/filter-elements-from-array**
+# **题目**
+给定一个整数数组 arr 和一个过滤函数 fn，并返回一个过滤后的数组 filteredArr 。
+
+fn 函数接受一个或两个参数：
+
+arr[i] - arr 中的数字
+i - arr[i] 的索引
+filteredArr 应该只包含使表达式 fn(arr[i], i) 的值为 真值 的 arr 中的元素。真值 是指 Boolean(value) 返回参数为 true 的值。
+
+请在不使用内置的 Array.filter 方法的情况下解决该问题。
+
+### 解题思路
+if里面使用fn函数来判断是否加入新数组中
+
+### 代码
+
+```javascript
+/**
+ * @param {number[]} arr
+ * @param {Function} fn
+ * @return {number[]}
+ */
+var filter = function (arr, fn) {
+  const nums = [];
+  for (let i = 0; i < arr.length; i++) {
+    if (fn(arr[i], i)) nums.push(arr[i]);
+  }
+  return nums;
+};
 ```
