feat: hxq feat shixi 0717

--- a/source/_posts/实习日记2.md
+++ b/source/_posts/实习日记2.md
@@ -8,6 +8,30 @@ cover: https://picsum.photos/1080/1080?random=122184
 feature: false
 date: 2023-04-10 17:51:01
 ---
-## 生产队的驴都笑哈哈了！！！
+## 用require解析图片
+require是一种在JavaScript中引入模块资源的方法，通常用于加载图片、样式表和其他静态文件。
 
-![](../images/shixi/zhouji2.png)
+在Vue组件中使用require时，它可以将相对路径或模块名称解析为真实的URL。通过使用require，我们可以在代码中将静态资源与组件绑定起来，并使其在构建过程中被正确地处理和优化。
+
+具体到您的代码示例中，require('@/assets/img/professional-investor/profession/icon-bond@2x.png')用于将指定路径下的图片文件引入到代码中。这个路径可以是相对路径或模块名称，@/是一种特殊的别名，通常表示项目根目录。
+
+使用require会触发模块系统的自动解析和处理流程，确保图片文件能够被正确地加载和使用。请注意，require通常是在构建过程中被解析和处理的，并不是在浏览器中直接执行的。
+
+总结起来，require的作用是将相对路径或模块名称解析为静态资源的真实URL，并将其引入到代码中以供使用。
+## 使用示例
+如果您想将require与getImagePath方法结合起来，可以在计算属性中使用require来动态加载图片。
+
+以下是一个示例：
+
+```
+computed: {
+  getImagePath() {
+    // 使用 require 加载图片
+    const imagePath = require('@/assets/img/professional-investor/profession/icon-bond@2x.png');
+    
+    // 返回图片路径
+    return imagePath;
+  }
+}
+```
+
