fix: hxq fix 0719

--- a/source/_posts/算法3.0.md
+++ b/source/_posts/算法3.0.md
@@ -1,5 +1,5 @@
 ---
-title: 转换数组中的每个元素
+title: 基本数组转换
 tags:
   - JavaScript
 categories:
@@ -9,18 +9,14 @@ feature: false
 date: 2023-07-13 17:51:01
 ---
 
+
+
+# **转换数组的每个元素**
 **力扣：ttps://leetcode.cn/problems/apply-transform-over-each-element-in-array**
-
-
-# **题目**
-编写一个函数，这个函数接收一个整数数组 arr 和一个映射函数  fn ，通过该映射函数返回一个新的数组。
-
-返回数组的创建语句应为 returnedArray[i] = fn(arr[i], i) 。
-
-请你在不使用内置方法 Array.map 的前提下解决这个问题
 
 ### 解题思路
 用for遍历每一项然后再映射
+
 
 ### 代码
 
@@ -38,17 +34,30 @@ var map = function(arr, fn) {
 };
 ```
 
+# **过滤数组中的元素**
 **力扣：https://leetcode.cn/problems/filter-elements-from-array**
-# **题目**
-给定一个整数数组 arr 和一个过滤函数 fn，并返回一个过滤后的数组 filteredArr 。
 
-fn 函数接受一个或两个参数：
+### 解题思路
+if里面使用fn函数来判断是否加入新数组中
 
-arr[i] - arr 中的数字
-i - arr[i] 的索引
-filteredArr 应该只包含使表达式 fn(arr[i], i) 的值为 真值 的 arr 中的元素。真值 是指 Boolean(value) 返回参数为 true 的值。
+### 代码
 
-请在不使用内置的 Array.filter 方法的情况下解决该问题。
+```javascript
+/**
+ * @param {number[]} arr
+ * @param {Function} fn
+ * @return {number[]}
+ */
+var filter = function (arr, fn) {
+  const nums = [];
+  for (let i = 0; i < arr.length; i++) {
+    if (fn(arr[i], i)) nums.push(arr[i]);
+  }
+  return nums;
+};
+```
+# **数组归约运算**
+**力扣：https://leetcode.cn/problems/filter-elements-from-array**
 
 ### 解题思路
 if里面使用fn函数来判断是否加入新数组中
